--- a/index.html
+++ b/index.html
@@ -11,8 +11,36 @@
     <title>Star Wars API</title>
   </head>
   <body>
+    <header>
+      <h1><img src="./src/assets/img/Star_Wars_Logo..png" alt="star-wars-logo"/></h1>
+      <nav class="category-container">
+        <ul class="category-list">
+          <li><button class="category__buttons category__button--films">Films</button></li>
+          <li><button class="category__buttons category__button--people">People</button></li>
+          <li><button class="category__buttons category__button--planets">Planets</button></li>
+          <li><button class="category__buttons category__button--vehicles">Vehicles</button></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!-- DISPLAY OF CHOSEN CATEGORY RECORDS-->
+      <div class="record-card-container">
+      
+      </div>
 
-    
+      <!-- PROPERTY MODAL STRUCTURE -->
+       <div class="property-modal">
+        <div class="property-modal__content">
+          <h2 class="property-modal__title">Titel</h2>
+          <ol class="property-list">
+
+          </ol>
+          <button class="property-modal__close-button">Close Modal</button>
+        </div>
+       </div>
+    </main>
+
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
