complete fetch and render api

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     </main>
 
 
-    <script type="module" src="/src/main.js"></script>
+    <script src="./src/js/app.js" type="module"></script>
   </body>
 </html>
