complete responsive styling + fix-ups

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ol class="property-list">
 
           </ol>
-          <button class="property-modal__close-button">Close Modal</button>
+          <button class="property-modal__close-button">Close</button>
         </div>
        </div>
     </main>
