final touches done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1><img src="./src/assets/img/Star_Wars_Logo..png" alt="star-wars-logo"/></h1>
       <nav class="category-container">
         <ul class="category-list">
-          <li><button class="category__buttons category__button--films">Films</button></li>
+          <li><button class="category__buttons category__button--films active">Films</button></li>
           <li><button class="category__buttons category__button--people">People</button></li>
           <li><button class="category__buttons category__button--planets">Planets</button></li>
           <li><button class="category__buttons category__button--vehicles">Vehicles</button></li>
@@ -25,8 +25,9 @@
     <main>
       <!-- DISPLAY OF CHOSEN CATEGORY RECORDS-->
       <div class="record-card-container">
-      
+
       </div>
+      <div class=error-message></div>
 
       <!-- PROPERTY MODAL STRUCTURE -->
        <div class="property-modal">
@@ -39,7 +40,6 @@
         </div>
        </div>
     </main>
-
 
     <script src="./src/js/app.js" type="module"></script>
   </body>
